[package]
name = "mos_6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["decimal_mode"]
decimal_mode = []

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "cpu_benchmark"
harness = false
